# padel_game_analytics-cv

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
outputs/: shots.csv  shots.json
src/: classify.py  detect.py  pipeline.py  track.py
src/padel_analytics/: __init__.py  cli.py
