[project]
name = "padel-game-analytics"
version = "0.1.0"
description = "Padel gameplay analytics prototype for shot classification."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "opencv-python>=4.9.0",
    "ultralytics>=8.3.0",
    "mediapipe>=0.10.14",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "tqdm>=4.66.0",
]

[project.scripts]
padel-analyze = "padel_analytics.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/padel_analytics"]
